# mlops

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yaml  dvc.yaml  params.yaml  pyproject.toml  requirements.txt
.dvc/: config
.github/workflows/: ci.yml  release.yml
data/interim/: .gitignore
data/processed/: test.csv.dvc  train.csv.dvc
docs/: mkdocs.yml
docs/docs/: index.md
mlops/: dataset.py  load_data.py  preprocess.py  train.py
mlops/api/: main.py
models/: .gitignore
notebooks/: 1.0-pstpn-dataset-analysis.ipynb  1.0-pstpn-eda.ipynb  1.0-pstpn-linreg_vs_randforest.ipynb
tests/: test_api.py  test_preprocess.py
