[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "mlops"
version = "0.0.1"
description = "ITMO MLOps"
authors = [
  { name = "pstpn" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "==3.11.13"
dependencies = [
  "loguru==0.7.3",
  "mkdocs==1.6.1",
  "python-dotenv==1.2.1",
  "ruff==0.15.1",
  "tqdm==4.67.3",
  "typer==0.24.0",
  "pandas==2.3.3",
  "scipy==1.17.0",
  "matplotlib==3.10.8",
  "autoviz==0.1.905",
]


[tool.ruff]
line-length = 99
src = ["mlops"]
include = ["pyproject.toml", "mlops/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["mlops"]
force-sort-within-sections = true

