[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "mlops"
version = "0.0.1"
description = "ITMO MLOps"
authors = [
  { name = "pstpn" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = ">=3.10,<3.12"
dependencies = [
  "loguru==0.7.3",
  "mkdocs==1.6.1",
  "python-dotenv==1.2.1",
  "ruff==0.15.1",
  "tqdm==4.67.3",
  "typer==0.24.0",
  "pandas==2.3.3",
  "scipy==1.17.0",
  "matplotlib==3.10.8",
  "autoviz==0.1.905",
  "scikit-learn==1.7.2",
  "mlflow==3.5.1",
  "joblib==1.5.2",
  "fastapi==0.117.1",
  "uvicorn==0.36.0",
  "httpx==0.28.1",
  "pytest==8.3.3",
  "pytest-cov==5.0.0",
]


[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=mlops.preprocess --cov=mlops.api.main --cov=mlops.config --cov-report=term-missing --cov-fail-under=80"


[tool.ruff]
line-length = 99
src = ["mlops"]
include = ["pyproject.toml", "mlops/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["mlops"]
force-sort-within-sections = true

