[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "mlops"
version = "0.0.1"
description = "ITMO MLOps"
authors = [
  { name = "pstpn" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = ">=3.10,<3.12"
dependencies = [
  "loguru==0.7.3",
  "mkdocs==1.6.1",
  "python-dotenv==1.2.1",
  "ruff==0.15.1",
  "tqdm==4.67.3",
  "typer==0.24.0",
  "pandas==2.3.3",
  "scipy==1.15.3",
  "matplotlib==3.10.8",
  "autoviz==0.1.905",
  "scikit-learn==1.7.2",
  "mlflow==3.11.1",
  "joblib==1.5.2",
  "fastapi==0.121.0",
  "starlette==0.49.1",
  "uvicorn==0.36.0",
  "cryptography==46.0.7",
  "nltk==3.9.4",
  "pillow==12.2.0",
  "pyasn1==0.6.3",
  "pygments==2.20.0",
  "requests==2.33.0",
  "tornado==6.5.5",
  "werkzeug==3.1.6",
  "httpx==0.28.1",
  "pytest==9.0.3",
  "pytest-cov==5.0.0",
]


[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=mlops.preprocess --cov=mlops.api.main --cov=mlops.config --cov-report=term-missing --cov-fail-under=80"


[tool.ruff]
line-length = 99
src = ["mlops"]
include = ["pyproject.toml", "mlops/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["mlops"]
force-sort-within-sections = true

